fix: wrong position

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@
 
 .image-right {
   position: absolute;
+  top: 30px;
   right: 10%;
 }
 
